# ascii-art-converter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/image_ascii/: converter.rs  export.rs  mod.rs  options.rs  palette.rs  video.rs
src/components/: AnimatedAsciiPreview.test.tsx  AnimatedAsciiPreview.tsx  AppTabs.tsx  AsciiPreview.test.tsx  AsciiPreview.tsx  ExportActions.test.tsx  ExportActions.tsx  GifExportActions.test.tsx  GifExportActions.tsx  ImageAsciiTab.test.tsx  ImageAsciiTab.tsx  ImageExportActions.test.tsx  ImageExportActions.tsx  ParameterPanel.tsx  TextAsciiTab.tsx  VideoAsciiTab.test.tsx  VideoAsciiTab.tsx  VideoExportActions.tsx
src/lib/: asciiAnimation.ts  asciiGif.ts  asciiImage.test.ts  asciiImage.ts  asciiVideo.ts  gifenc.d.ts  tauri.test.ts  tauri.ts
src/lib/figlet/: figlet.test.ts  figlet.ts  fonts.test.ts  fonts.ts  standard.flf  standard.ts
src/types/: ascii.ts
